feat: add meta tags

--- a/FGIAFG.Web/Views/Shared/_Layout.cshtml
+++ b/FGIAFG.Web/Views/Shared/_Layout.cshtml
@@ -1,9 +1,29 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- HTML Meta Tags -->
+    <title>Free Game Is A Free Game</title>
+    <meta name="description" content="Get your free games while they're hot">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.fgiafg.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Free Game Is A Free Game">
+    <meta property="og:description" content="Get your free games while they're hot">
+    <meta property="og:image" content="https://pbs.twimg.com/profile_images/1147961901328084993/AQW7L1gH_400x400.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="fgiafg.com">
+    <meta property="twitter:url" content="https://www.fgiafg.com">
+    <meta name="twitter:title" content="Free Game Is A Free Game">
+    <meta name="twitter:description" content="Get your free games while they're hot">
+    <meta name="twitter:image" content="https://pbs.twimg.com/profile_images/1147961901328084993/AQW7L1gH_400x400.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Free Game Is A Free Game</title>
     @await Html.PartialAsync("_Favicons")
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css"/>
